--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,2 +1,11 @@
-%h1 Landing#index
-%p Find me in app/views/landing/index.html.haml
+%section#disco_ball
+%section#spiel
+  .row
+    .small-10.large-5.small-centered.columns
+      %h1.icon-redisco
+  .row
+    .small-10.large-5.small-centered.columns
+      %p Redisco is a network dedicated to cultivating open minds, fun, and creativity through music, art, and dancing.
+  .row
+    .small-10.large-5.small-centered.columns
+      = render 'form'
