--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -63,8 +63,8 @@ $em-base: 16px !default;
 
 $default-float: left;
 
-// $body-bg: #fff;
-// $body-font-color: #222;
+$body-bg: #222;
+$body-font-color: #fff;
 $body-font-family: 'Josefin Sans', sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
@@ -79,7 +79,7 @@ $body-font-family: 'Josefin Sans', sans-serif;
 
 // Colors
 
-// $primary-color: #2ba6cb;
+$primary-color: #00C1F7;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
@@ -173,9 +173,9 @@ $body-font-family: 'Josefin Sans', sans-serif;
 // Control header font styles
 
 $header-font-family: $body-font-family;
-// $header-font-weight: bold;
+$header-font-weight: normal;
 // $header-font-style: normal;
-// $header-font-color: #222;
+$header-font-color: $primary-color;
 // $header-line-height: 1.4;
 // $header-top-margin: .2em;
 // $header-bottom-margin: .5em;
