--- a/app/views/landing/_form.html.haml
+++ b/app/views/landing/_form.html.haml
@@ -1,3 +1,6 @@
-%form.validate{action: "http://theredisco.us3.list-manage.com/subscribe/post?u=d294e42961e4b9b89e6d30040&id=bd906a397b", method: "post", name: "mc-embedded-subscribe-form", novalidate: "", target: "_blank"}
-  %input.email{name: "EMAIL", placeholder: "email address", required: "", type: "email", value: ""}
-  %input.button{name: "subscribe", type: "submit", value: "Subscribe"}
+%form.validate{ action: "http://theredisco.us3.list-manage.com/subscribe/post?u=d294e42961e4b9b89e6d30040&id=bd906a397b", method: "post", name: "mc-embedded-subscribe-form", novalidate: "", target: "_blank" }
+  .row
+    .small-12.large-8.columns
+      %input#sign-up.email{ name: "EMAIL", placeholder: "Your email …", required: "", type: "email", value: "" }
+    .small-12.large-4.columns
+      %input{ name: "subscribe", type: "submit", value: "Join Us", class: 'button round postfix', id: 'submit' }
