--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,11 +1,14 @@
 %section#disco_ball
+  .row
+    .small-7.large-3.small-centered.columns
+      = image_tag 'disco_ball_and_chain.png'
 %section#spiel
+  .row#hashtag_redisco
+    .small-11.large-5.small-centered.columns
+      = image_tag 'redisco_logo.png'
+  .row#pitch
+    .small-11.large-5.small-centered.columns
+      %h3 Redisco is a network dedicated to cultivating open minds, fun, and creativity through music, art, and dancing.
   .row
-    .small-10.large-5.small-centered.columns
-      %h1.icon-redisco
-  .row
-    .small-10.large-5.small-centered.columns
-      %p Redisco is a network dedicated to cultivating open minds, fun, and creativity through music, art, and dancing.
-  .row
-    .small-10.large-5.small-centered.columns
+    .small-11.large-5.small-centered.columns
       = render 'form'
