--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,13 +1,10 @@
 %section#footer
   .row
-    .small-10.large-3.small-centered.columns
-      %ul.inline-list
-        %li
-          = link_to '#' do
-            %span.icon-social_soundcloud_circle
-        %li
-          = link_to '#' do
-            %span.icon-social_facebook_circle
-        %li
-          = link_to '#' do
-            %span.icon-social_instagram_circle
+    .small-11.large-11.small-centered.columns
+      = link_to '#' do
+        %span#soundcloud.icon-social_soundcloud_circle
+      = link_to '#' do
+        %span#facebook.icon-social_facebook_circle
+      = link_to '#' do
+        %span#instagram.icon-social_instagram_circle
+.space-below-that-seems-unnecessary
