unbreak social links mobile

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -91,6 +91,9 @@ img.logo {
 #facebook {
   display: inline-block;
   margin: 0 1.5em;
+  @media only screen and (max-width: 768px) {
+    margin: 0 1em;
+  }
 }
 
 #soundcloud {
