--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,7 +1,8 @@
 %section#disco_ball
   .row
     .small-7.large-3.small-centered.columns
-      = image_tag 'disco_ball_and_chain.png'
+      = image_tag 'logo.png'
+= render 'layouts/footer'
 %section#spiel
   .row#hashtag_redisco
     .small-11.large-5.small-centered.columns
