--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,10 +1,11 @@
 %section#footer
   .row
-    .small-11.large-11.small-centered.columns
+    .small-12.large-11.small-centered.columns
       = link_to '#' do
         %span#soundcloud.icon-social_soundcloud_circle
       = link_to '#' do
         %span#facebook.icon-social_facebook_circle
       = link_to '#' do
+        %span#facebook.icon-social_facebook_circle
+      = link_to '#' do
         %span#instagram.icon-social_instagram_circle
-.space-below-that-seems-unnecessary
