--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -48,13 +48,12 @@ img.logo {
 #pitch h3 {
   line-height: 1.6em;
   letter-spacing: 1.2px;
-  text-transform: uppercase;
   margin: 2.5em auto 1.5em;
   font-weight: 100;
   color: $body-font-color;
-  font-size: 1.25em;
+  font-size: 1.6em;
   @media only screen and (max-width: 768px) {
-    font-size: 1.05em;
+    font-size: 1.4em;
   }
 }
 
@@ -80,28 +79,13 @@ img.logo {
 
 #footer {
   margin-top: 1.5em;
-  font-size: 2.4em;
+  font-size: 3em;
   text-align: center;
-}
-
-#instagram {
-  display: inline-block;
-}
-
-#facebook {
-  display: inline-block;
-  margin: 0 1.5em;
-  @media only screen and (max-width: 768px) {
-    margin: 0 1em;
+  a {
+    margin: 0 0.4em;
+    @media only screen and (max-width: 768px) {
+      margin: 0 0.2em;
+      font-size: 0.8em;
+    }
   }
-}
-
-#soundcloud {
-  display: inline-block;
-}
-
-.space-below-that-seems-unnecessary {
-  margin-top: 3em;
-  position: relative;
-  height: 1em;
 }
