--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,3 +1,4 @@
-%nav#top-nav.row
-  .small-11.large-11.small-centered.columns
-    = image_tag 'logo.png', class: 'logo'
+- if false
+  %nav#top-nav.row
+    .small-11.large-11.small-centered.columns
+      = image_tag 'logo.png', class: 'logo'
