--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -11,5 +11,5 @@
     .small-11.large-5.small-centered.columns
       %h3 Redisco is a network dedicated to cultivating open minds, fun, and creativity through music, art, and dancing.
   .row
-    .small-11.large-5.small-centered.columns
+    #close.small-11.large-5.small-centered.columns
       = render 'form'
