--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,11 +1,11 @@
 %section#footer
   .row
     .small-12.large-11.small-centered.columns
-      = link_to '#' do
+      = link_to 'https://soundcloud.com/theredisco' do
         %span#soundcloud.icon-social_soundcloud_circle
-      = link_to '#' do
+      = link_to 'https://www.facebook.com/theRedisco' do
         %span#facebook.icon-social_facebook_circle
-      = link_to '#' do
-        %span#facebook.icon-social_facebook_circle
-      = link_to '#' do
+      = link_to 'http://instagram.com/theredisco' do
+        %span#tumblr.icon-social_tumblr_circle
+      = link_to 'https://soundcloud.com/theredisco' do
         %span#instagram.icon-social_instagram_circle
