--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -38,8 +38,12 @@ img.logo {
   }
 }
 
+#disco_ball {
+  margin-top: 15%;
+}
+
 #spiel {
-  margin-top: 8em;
+  margin-top: 6em;
   @media only screen and (max-width: 768px) {
     margin-top: 4em;
   }
@@ -88,4 +92,8 @@ img.logo {
       font-size: 0.8em;
     }
   }
+}
+
+#close {
+  margin-bottom: 25%;
 }
