--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,11 +1,15 @@
 %section#footer
   .row
     .small-12.large-11.small-centered.columns
-      = link_to 'https://soundcloud.com/theredisco' do
+
+      = link_to 'https://soundcloud.com/theredisco', target: "_blank"  do
         %span#soundcloud.icon-social_soundcloud_circle
-      = link_to 'https://www.facebook.com/theRedisco' do
+
+      = link_to 'https://www.facebook.com/theRedisco', target: "_blank"  do
         %span#facebook.icon-social_facebook_circle
-      = link_to 'http://instagram.com/theredisco' do
+
+      = link_to 'http://www.theredisco.tumblr.com', target: "_blank"  do
         %span#tumblr.icon-social_tumblr_circle
-      = link_to 'https://soundcloud.com/theredisco' do
+
+      = link_to 'http://www.instagram.com/theredisco', target: "_blank" do
         %span#instagram.icon-social_instagram_circle
